# FairShare

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
FairShare_Backup/: test_input.txt
FairShare_Backup/include/: FileManager.h  Ledger.h
FairShare_Backup/src/: FileManager.cpp  User.cpp
frontend/: index.html  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/styles/: index.css  theme.css
include/: Expense.h  FairShareManager.h  Ledger.h  Split.h  User.h
src/: Expense.cpp  FairShareManager.cpp  Ledger.cpp  Split.cpp  main.cpp
temp_ui/: README.md
temp_ui/src/app/: App.tsx
temp_ui/src/styles/: theme.css
tests/: tests.cpp
